# cg2025_ML

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: router.py
app/core/: base.py  database.py  seed.py
app/ml/: engine.py  loader.py
app/ml/artifacts/: anomaly_scaler.pkl  catboost_classifier.cbm
app/ml/components/: advisory.py  anomaly.py  feature_eng.py
app/models/: transaction.py
app/schemas/: advisory.py  analytics.py  budget.py  notification.py  transaction.py
app/services/: finance.py
